distance origin pan and ms bands

--- a/pan_sharpening.ipynb
+++ b/pan_sharpening.ipynb
@@ -92,7 +92,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x199d556f1c0>"
+       "<matplotlib.image.AxesImage at 0x1bb0033d1c0>"
       ]
      },
      "execution_count": 3,
@@ -238,7 +238,7 @@
      "output_type": "stream",
      "text": [
       "Pixel min value: 7191.0\n",
-      "Pixel max value: 25784.0\n",
+      "Pixel max value: 26340.0\n",
       "Pixel mean value: 8274.8\n",
       "Pixel value Std.Dev.: 823.5\n"
      ]
@@ -332,8 +332,7 @@
     "band2_data_norm = normalize(band2_data)\n",
     "band2_data_norm_eq = exposure.equalize_hist(band2_data_norm)\n",
     "rgb_band = rgb_ds.GetRasterBand(3)\n",
-    "rgb_band.WriteArray(band2_data_norm_eq)\n",
-    "#out_band.WriteArray(band2_data)"
+    "rgb_band.WriteArray(band2_data_norm_eq)"
    ]
   },
   {
@@ -366,8 +365,7 @@
     "band3_data = band3_ds.ReadAsArray()\n",
     "band3_data_norm_eq = exposure.equalize_hist(normalize(band3_data))\n",
     "rgb_band = rgb_ds.GetRasterBand(2)\n",
-    "rgb_band.WriteArray(band3_data_norm_eq)\n",
-    "#out_band.WriteArray(band3_data)"
+    "rgb_band.WriteArray(band3_data_norm_eq)"
    ]
   },
   {
@@ -400,8 +398,7 @@
     "band4_data = band4_ds.ReadAsArray()\n",
     "band4_data_norm_eq = exposure.equalize_hist(normalize(band4_data))\n",
     "rgb_band = rgb_ds.GetRasterBand(1)\n",
-    "rgb_band.WriteArray(band4_data_norm_eq)\n",
-    "#out_band.WriteArray(band4_data)"
+    "rgb_band.WriteArray(band4_data_norm_eq)"
    ]
   },
   {
@@ -454,7 +451,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x199d7417790>"
+       "<matplotlib.image.AxesImage at 0x1bb03304790>"
       ]
      },
      "execution_count": 17,
@@ -489,7 +486,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x199d7463370>"
+       "<matplotlib.image.AxesImage at 0x1bb03d90370>"
       ]
      },
      "execution_count": 18,
@@ -565,13 +562,43 @@
     }
    ],
    "source": [
-    "x_origin, x_pixel_resolution, row_rotation, y_origin, column_rotation, y_pixel_resolution = pan_ds.GetGeoTransform()\n",
-    "print('x origin: {} m.\\ny origin: {} m.\\nrow rot.: {}\\ncolumn rot.: {}\\nx pixel res.: {} m.\\ny pixel res: {} m.'.format(x_origin, \n",
-    "                                                                                                                        y_origin, \n",
+    "pan_x_origin, pan_x_pixel_resolution, row_rotation, pan_y_origin, column_rotation, pan_y_pixel_resolution = pan_ds.GetGeoTransform()\n",
+    "print('x origin: {} m.\\ny origin: {} m.\\nrow rot.: {}\\ncolumn rot.: {}\\nx pixel res.: {} m.\\ny pixel res: {} m.'.format(pan_x_origin, \n",
+    "                                                                                                                        pan_y_origin, \n",
     "                                                                                                                        row_rotation, \n",
     "                                                                                                                        column_rotation, \n",
-    "                                                                                                                        x_pixel_resolution, \n",
-    "                                                                                                                        x_pixel_resolution))"
+    "                                                                                                                        pan_x_pixel_resolution, \n",
+    "                                                                                                                        pan_x_pixel_resolution))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df917351",
+   "metadata": {},
+   "source": [
+    "### Distance origin of PAN and MS bands"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "fb27abbd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distance PAN and MS origin\n",
+      "Horizontal: 7.5 m\n",
+      "Vertical: -7.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "delta_pan_ms_origin_x = pan_x_origin - x_origin\n",
+    "delta_pan_ms_origin_y = pan_y_origin - y_origin\n",
+    "print('Distance PAN and MS origin\\nHorizontal: {} m\\nVertical: {}'.format(delta_pan_ms_origin_x, delta_pan_ms_origin_y))"
    ]
   },
   {
@@ -633,7 +660,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35363457",
+   "id": "90b38e66",
    "metadata": {},
    "source": [
     "## Pan-sharpening"
