--- a/raster_subsetting.ipynb
+++ b/raster_subsetting.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "ad654c14",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "80f0362a",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "d3dd351a",
    "metadata": {},
    "outputs": [
@@ -75,10 +75,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x11fde7a9af0>"
+       "<matplotlib.image.AxesImage at 0x2234cd7a3d0>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "02e50798",
    "metadata": {},
    "outputs": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "2d2eb4aa",
    "metadata": {},
    "outputs": [
@@ -143,7 +143,7 @@
        "'PROJCS[\"WGS 84 / UTM zone 33N\",GEOGCS[\"WGS 84\",DATUM[\"WGS_1984\",SPHEROID[\"WGS 84\",6378137,298.257223563,AUTHORITY[\"EPSG\",\"7030\"]],AUTHORITY[\"EPSG\",\"6326\"]],PRIMEM[\"Greenwich\",0,AUTHORITY[\"EPSG\",\"8901\"]],UNIT[\"degree\",0.0174532925199433,AUTHORITY[\"EPSG\",\"9122\"]],AUTHORITY[\"EPSG\",\"4326\"]],PROJECTION[\"Transverse_Mercator\"],PARAMETER[\"latitude_of_origin\",0],PARAMETER[\"central_meridian\",15],PARAMETER[\"scale_factor\",0.9996],PARAMETER[\"false_easting\",500000],PARAMETER[\"false_northing\",0],UNIT[\"metre\",1,AUTHORITY[\"EPSG\",\"9001\"]],AXIS[\"Easting\",EAST],AXIS[\"Northing\",NORTH],AUTHORITY[\"EPSG\",\"32633\"]]'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "2270c684",
    "metadata": {},
    "outputs": [
@@ -178,27 +178,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "1079a52a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(264885.0, 30.0, 0.0, 4742715.0, 0.0, -30.0)"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "band2_ds.GetGeoTransform()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "97809c9a",
    "metadata": {},
@@ -208,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "id": "1177acdb",
    "metadata": {},
    "outputs": [
@@ -248,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "id": "6897f50a",
    "metadata": {},
    "outputs": [
@@ -281,48 +260,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "id": "302effd1",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(3500, 5500)"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Subset Origin\n",
+      "Row: 3500\n",
+      "Column: 5500\n"
+     ]
     }
    ],
    "source": [
     "s_col = int(x_t / x_pixel_resolution)\n",
     "s_row = int(y_t / y_pixel_resolution)\n",
-    "s_col, s_row"
+    "print('Subset Origin\\nRow: {}\\nColumn: {}'.format(s_col, s_row))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "id": "e6d6209a",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(667, 667)"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Subset window\n",
+      "Number of columns: 667\n",
+      "Number of rows: 667\n"
+     ]
     }
    ],
    "source": [
     "sub_cols = round(delta_x / x_pixel_resolution)\n",
     "sub_rows = round(delta_y / y_pixel_resolution)\n",
-    "sub_cols, sub_rows  "
+    "print('Subset window\\nNumber of columns: {}\\nNumber of rows: {}'.format(sub_cols, sub_rows))  "
    ]
   },
   {
@@ -335,17 +312,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "id": "873d207d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x11fdf7a6e20>"
+       "<matplotlib.image.AxesImage at 0x223642b1400>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -363,8 +340,14 @@
     }
    ],
    "source": [
-    "patch_data = np.empty((sub_cols, sub_rows), dtype=float)\n",
-    "band2_ds.ReadAsArray(s_col, s_row, sub_cols, sub_rows, buf_obj=patch_data)\n",
+    "if s_col > cols or s_row > rows:\n",
+    "    print('The origin subset must be within the image window')\n",
+    "elif sub_cols > cols or sub_rows > rows:\n",
+    "    print('The size of the subset cannot be larger than the image')\n",
+    "else:\n",
+    "    patch_data = np.empty((sub_cols, sub_rows), dtype=float)\n",
+    "    band2_ds.ReadAsArray(s_col, s_row, sub_cols, sub_rows, buf_obj=patch_data)\n",
+    "\n",
     "plt.imshow(patch_data, cmap='gray')"
    ]
   },
@@ -378,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "id": "4669d744",
    "metadata": {},
    "outputs": [],
@@ -463,13 +446,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def subset_raster(path_input_image, x_t, y_t, delta_x, delta_y, path_subset):\n",
+    "def subset_raster_one_band(path_input_image, x_t, y_t, delta_x, delta_y, path_subset):\n",
     "    '''\n",
     "    Returns a subset of a raster image in the GeoTiff format.\n",
     "    path_input_image: path to the GeoTiff file with one band data\n",
     "    x_t, y_t: coordinates, in meters, of the subset origin, with respect to the input image origin\n",
     "    delta_x, delta_y: horizontal and vertical size of the subset, in meters\n",
-    "    path_subset: path to the subset \n",
+    "    path_subset: path to the subset GeoTiff file\n",
     "    '''\n",
     "    band_ds = gdal.Open(path_input_image)\n",
     "    gt = band_ds.GetGeoTransform()\n",
@@ -505,7 +488,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "subset_raster(band8_fn, 105000, -165000, 20000, 20000, path + 'LC09_L1TP_190031_B8_subset.tif')"
+    "subset_raster_one_band(band8_fn, 105000, -165000, 20000, 20000, path + 'LC09_L1TP_190031_B8_subset.tif')"
    ]
   }
  ],
