--- a/raster_subsetting.ipynb
+++ b/raster_subsetting.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Raster subsetting\n",
-    "The size of a satellite image depends on the number of bands, the number of pixels, and the digitization of the pixel values. In any case even a single band usually takes some tens of megabytes and might be even more than 1 GB. Even when we are interested only in a subset of an image we have to download the full image and extract a subset from it. In the near future we might have a solution like the [Cloud Optimized GeoTIFF](https://www.cogeo.org/) but till the technology will be adopted by the USGS or Copernicus, we have to download the full images. In this notebook we want to extract a patch from an image and save it into a new GeoTIFF file. We begin with an image that contains only one band then we will see how to achieve the same result with an RGB image."
+    "The size of a satellite image depends on the number of bands, the number of pixels, and the digitization of the pixel values. In any case even a single band usually takes some tens of megabytes and might be even more than 1 GB. Even when we are interested only in a subset of an image we have to download the full image and extract a subset from it. In the near future we might have a solution like the [Cloud Optimized GeoTIFF](https://www.cogeo.org/) but till the technology will be adopted by the USGS or Copernicus, we have to download the full images. In this notebook we want to extract a patch from an image and save it into a new GeoTIFF file."
    ]
   },
   {
