--- a/geospatial_raster_data.ipynb
+++ b/geospatial_raster_data.ipynb
@@ -1069,13 +1069,13 @@
    "metadata": {},
    "source": [
     "### Georeferencing and warping\n",
-    "We want to transform the coordinates of the pixels of an image so that it can be mapped, that is each pixel corresponds to a real point that can be displayed on a map. The operation that assigns a coordinate pair to each pixel of an image is called *georeferencing*. Sometimes a simple georeferenciation is not enough and the image must be warped, that is its shape must be streched for its pixels to corresponds to real object that can be shown on a map. In order to map a pixel in the image to a place we have to apply a transformation from the image coordinate space to a georeferenced coordinate space (see ref. 1). For this task we can use some ground control points (GCPs). The procedure is explained in the [QGIS User Guide](https://docs.qgis.org/3.16/en/docs/user_manual/working_with_raster/georeferencer.html). As a simple example we will refer an image to the WGS84 geographic (unprojected) reference system. The example image does not have any spatial reference system so it cannot be overlaid onto a map, for example using QGIS, because the software doesn't know where it should be put."
+    "We want to transform the coordinates of the pixels of an image (i.e. row and column) so that it can be mapped, that is each pixel corresponds to a real point that can be referenced from a CRS and displayed on a map. The operation that assigns a coordinate pair to each pixel of an image is called *georeferencing*. Sometimes a simple georeferenciation is not enough and the image must be warped, that is its shape must be streched for its pixels to corresponds to real object that can be shown on a map. In order to map a pixel in the image to a place we have to apply a transformation from the image coordinate space to a georeferenced coordinate space (see ref. 1). For this task we can use some ground control points (GCPs). The procedure is explained in the [QGIS User Guide](https://docs.qgis.org/3.16/en/docs/user_manual/working_with_raster/georeferencer.html). As a simple example we will refer an image to the WGS84 geographic (unprojected) reference system. The example image does not have any spatial reference system so it cannot be overlaid onto a map, for example using QGIS, because the software doesn't know where it should be put."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "d933557a",
+   "id": "7dacd9fc",
    "metadata": {},
    "outputs": [
     {
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c40b1ec",
+   "id": "406f4cea",
    "metadata": {},
    "source": [
     "We copy the image in order to keep the original one since we are going to change the coordinates of the pixels "
