--- a/pan_sharpening.ipynb
+++ b/pan_sharpening.ipynb
@@ -6,12 +6,12 @@
    "metadata": {},
    "source": [
     "# Pan-sharpening\n",
-    "Many multispectral sensors (MS) used for Earth observation in the optical bands collect data in the RGB and NIR bands to extract information that is related to the that is related to the reflectance of the Earth surface on these bands. The spectral resolution of a platform is related to the number of bands in the optical spectrum and to the width of the bands. The narrower the width of a band the less energy the sensor can collect in the unit time and so its spatial resolution. In order to achieve the required spectral and spatial resolution many satellite platform add a panchromatic (PAN) sensor that collects the light from the full optical spectrum and also part of the near infrared band. Beacuse of the larger width the spatial resolution of the PAN band is usually more than two times the spatial resolution of the optical bands. The PAN band can be used to process the MS bands so that their spatial resolution will be the same as the PAN band. Many algorthms have been developed to implement the pan-sharpening technique with different results in terms of the quality of the output. In this notebook we use the imagery from Landsat 9: the tree RGB bands with 30 m spatial resolution, and the PAN band with 15 m resolution. We will use the pan-sharpening technique to achieve a resolution of 15 m for the three RGB bands. "
+    "Many multispectral sensors (MS) used for Earth observation in the optical bands collect data in the RGB and NIR bands to extract information that is related to the reflectance of the Earth surface on these bands. The spectral resolution of a platform is related to the number of bands in the optical spectrum and to the width of the bands. The narrower the width of a band the less energy the sensor can collect in the unit time and so its spatial resolution. In order to achieve the required spectral and spatial resolution many satellite platform add a panchromatic (PAN) sensor that collects the light from the full optical spectrum and also part of the near infrared band. Beacuse of the larger width the spatial resolution of the PAN band is usually more than two times the spatial resolution of the optical bands. The PAN band can be used to process the MS bands so that their spatial resolution will be the same as the PAN band. Many algorthms have been developed to implement the pan-sharpening technique with different results in terms of the quality of the output. In this notebook we use the imagery from Landsat 9: the tree RGB bands with 30 m spatial resolution, and the PAN band with 15 m resolution. We will use the pan-sharpening technique to achieve a resolution of 15 m for the three RGB bands. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f5ec8681",
    "metadata": {},
    "outputs": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "203f332a",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "3c32cb47",
    "metadata": {},
    "outputs": [
@@ -92,10 +92,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1bb0033d1c0>"
+       "<matplotlib.image.AxesImage at 0x1f9a3e11280>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -576,7 +576,7 @@
    "id": "df917351",
    "metadata": {},
    "source": [
-    "### Distance origin of PAN and MS bands"
+    "### Distance between origin of PAN and MS bands"
    ]
   },
   {
