--- a/raster_subsetting.ipynb
+++ b/raster_subsetting.ipynb
@@ -356,7 +356,7 @@
    "id": "c4a0700d",
    "metadata": {},
    "source": [
-    "We create a GeoTIFF file to store the subset image. It is important to set the origin of the subset with reference to the CRS, not the with the origin of the Landsat 9 image."
+    "We create a GeoTIFF file to store the subset image. It is important to set the origin of the subset with reference to the CRS, not with the origin of the Landsat 9 image."
    ]
   },
   {
@@ -448,7 +448,7 @@
    "source": [
     "def subset_raster_one_band(path_input_image, x_t, y_t, delta_x, delta_y, path_subset):\n",
     "    '''\n",
-    "    Returns a subset of a raster image in the GeoTiff format.\n",
+    "    Creates a subset of a raster image in the GeoTiff format.\n",
     "    path_input_image: path to the GeoTiff file with one band data\n",
     "    x_t, y_t: coordinates, in meters, of the subset origin, with respect to the input image origin\n",
     "    delta_x, delta_y: horizontal and vertical size of the subset, in meters\n",
