--- a/geospatial_raster_data.ipynb
+++ b/geospatial_raster_data.ipynb
@@ -14,7 +14,8 @@
    "metadata": {},
    "source": [
     "# Geospatial Data Analysis\n",
-    "Geospatial data such as satellite imagery or elevation model are represented as one or more matrices of values. For example an image is usually represented as three matrices (bands) of values in the Red, Blue or Green colors. Each pixel of the image is represented by three RGB values. Satellite imagery may have more than three bands depending on the type of sensor used in the acquisition. Digital elevetion models (DEMs) and land cover models are represented as single band raster data. In this section we'll see how raster data can be read, processed and written in a file."
+    "Geospatial data such as satellite imagery or elevation model are represented as one or more matrices of values. For example an image is usually represented as three matrices (bands) of values in the Red, Blue or Green colors. Each pixel of the image is represented by three RGB values. Satellite imagery may have more than three bands depending on the type of sensor used in the acquisition. Digital elevetion models (DEMs) and land cover models are represented as single band raster data. In this section we'll see how raster data can be read, processed and written in a file.  \n",
+    "Use [GDAL/OGR Cookbook](https://pcjericks.github.io/py-gdalogr-cookbook/index.html) for references."
    ]
   },
   {
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "408855da",
    "metadata": {},
    "outputs": [
@@ -82,7 +83,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1c583afea30>"
+       "<matplotlib.image.AxesImage at 0x1996c6fca30>"
       ]
      },
      "execution_count": 2,
@@ -122,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "5a97d9a0",
    "metadata": {},
    "outputs": [
@@ -259,10 +260,10 @@
      "text": [
       "x origin: 343724.25 m.\n",
       "y origin: 5369585.25 m.\n",
-      "row rotation: 0.0\n",
-      "column rotation: 0.0\n",
-      "x pixel resolution: 28.5 m.\n",
-      "y pixel resolution: 28.5 m.\n"
+      "row rot.: 0.0\n",
+      "column rot.: 0.0\n",
+      "x pixel res.: 28.5 m.\n",
+      "y pixel res: 28.5 m.\n"
      ]
     }
    ],
@@ -307,6 +308,58 @@
   },
   {
    "cell_type": "markdown",
+   "id": "901a6c34",
+   "metadata": {},
+   "source": [
+    "We can compute the bounding box of the raster data with the coordinates of its north-west and south-east vertices."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "2ffa9aa1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_raster_bbox(fn):\n",
+    "    '''\n",
+    "    Returns the coordinates of the upper left (north west) and\n",
+    "    lower right (south east) pixels of the raster file.\n",
+    "    '''\n",
+    "    ds = gdal.Open(fn)\n",
+    "    gt = ds.GetGeoTransform()\n",
+    "    north_west_x = gt[0]\n",
+    "    north_west_y = gt[3]\n",
+    "    x_pixel_resolution = gt[1]\n",
+    "    y_pixel_resolution = gt[5]\n",
+    "    south_east_x = north_west_x + x_pixel_resolution * ds.RasterXSize\n",
+    "    south_east_y = north_west_y + y_pixel_resolution * ds.RasterYSize\n",
+    "    return [[north_west_x, north_west_y], [south_east_x, south_east_y]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "0c673249",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[343724.25, 5369585.25], [595920.75, 5140929.75]]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_raster_bbox(band1_fn)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a39b0e96",
    "metadata": {},
    "source": [
@@ -315,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "b8a9fbbd",
    "metadata": {},
    "outputs": [
