note on raster resampling

--- a/geospatial_raster_data.ipynb
+++ b/geospatial_raster_data.ipynb
@@ -944,7 +944,7 @@
    "metadata": {},
    "source": [
     "### Resampling to smaller pixels (larger dimensions)\n",
-    "We read the input data into a 2D array and we write the data into an array whose dimensions are twice the original and the pixel resolution is half the original. The resampling to a smaller pixel resolution is done automatically by copyng the value of each pixel to 4 pixels in the new image."
+    "We read the input data into a 2D array and we write the data into an array whose dimensions are twice the original and the pixel resolution is half the original. This transformation is used to improve the spatial resolution of the multispectral (MS) bands when a panchromatic (PAN) band with a higher resolution is available. For instance, the Landsat imagery has a PAN band with a spatial resolution that is two times the resolution of the MS bands. The resampling to a smaller pixel resolution is done automatically by copyng the value of each pixel to 4 pixels in the new image."
    ]
   },
   {
