link to Cape Cod Wikipedia page

--- a/geospatial_raster_data.ipynb
+++ b/geospatial_raster_data.ipynb
@@ -1236,7 +1236,7 @@
    "metadata": {},
    "source": [
     "### Mosaicking\n",
-    "We want to join together images to cover an area that is partially covered by a set of small images. The composition is called a mosaic. The extension of the mosaic is computed from the images by finding the minimum and maximum values of the spatial coordinates x and y so that we can define the mosaic bounding box with two points: (min_x, max_y), (max_x, min_y). For this example we will use the [Massachusetts](https://app.box.com/s/1cwdnolsmtf0s04o0hshbv4vxiuqcmi9/file/45898207309) dataset provided by C. Garrard. The zip file must be unzipped in a folder like in the example. There are 6 images that are subsets of a composite image of [Cape Cod](https://en.wikipedia.org/wiki/Cape_Cod), Massachusetts. We want to merge these tiles of Cape Codin one single mosaic image."
+    "We want to join together images to cover an area that is partially covered by a set of small images. The composition is called a mosaic. The extension of the mosaic is computed from the images by finding the minimum and maximum values of the spatial coordinates x and y so that we can define the mosaic bounding box with two points: (min_x, max_y), (max_x, min_y). For this example we will use the [Massachusetts](https://app.box.com/s/1cwdnolsmtf0s04o0hshbv4vxiuqcmi9/file/45898207309) dataset provided by C. Garrard. The zip file must be unzipped in a folder like in the example. There are 6 images that are subsets of a composite image of [Cape Cod](https://en.wikipedia.org/wiki/Cape_Cod), Massachusetts. We want to merge these tiles into one single mosaic image."
    ]
   },
   {
