--- a/web_mapping.ipynb
+++ b/web_mapping.ipynb
@@ -10,15 +10,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fb5a7cce-ffb3-4f8c-b076-726d18fc5a78",
+   "metadata": {},
+   "source": [
+    "## Rectangle on a satellite image"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "id": "eeca9589-7179-41c7-a5b4-eaf910e33b16",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a32dbd9b8ab24c0fb8247c3ab1c4e0f2",
+       "model_id": "c7163c5e62ec41c78a1c00b4baa190f8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -26,12 +34,13 @@
        "Map(center=[41.89, 12.492], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title', 'zoom_…"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import geopandas as gpd\n",
     "from ipyleaflet import Map, Marker, basemaps, basemap_to_tiles, Rectangle, DrawControl\n",
     "from ipywidgets import Layout\n",
     "\n",
@@ -70,15 +79,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "20161e76-f15f-4030-8a38-5e49895cb273",
+   "metadata": {},
+   "source": [
+    "## Drawing a rectangle on a map"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "fde5266d-bb55-4583-bea6-a6204d8d9fa9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4ee99173ecf447f69eee99ac3fa60b9d",
+       "model_id": "62115bd24fb6453e8e76d866364a39d7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -86,7 +103,7 @@
        "Map(center=[50, 354], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title', 'zoom_out_te…"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "id": "1c078a52-0683-4176-8a14-3a933b567501",
    "metadata": {},
    "outputs": [
@@ -133,7 +150,7 @@
        "1"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "5f004f19-39ae-4cff-93a5-f0e0e3dd4780",
    "metadata": {},
    "outputs": [
@@ -153,7 +170,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[372.118022, 41.562854], [372.118022, 42.217127], [372.777445, 42.217127], [372.777445, 41.562854], [372.118022, 41.562854]]]\n"
+      "[[[360.775946, 47.243441], [360.775946, 49.405255], [365.435869, 49.405255], [365.435869, 47.243441], [360.775946, 47.243441]]]\n"
      ]
     }
    ],
@@ -163,25 +180,34 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "43b3508e-021e-46ac-89cc-c8c5905efa0b",
+   "cell_type": "markdown",
+   "id": "65206298-a8d5-4e4c-b997-f0ba7487a2c8",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "milan_gdf = countries = geopandas.read_file('data/vector/italy/osm/milan_20240310.geojson')"
+    "## Getting the bounding box of an area of interest\n",
+    "Often we need to select an area of interestt using its bounding box. For example we want to select an area that contains certain features, e.g. buildings with some attributes of interest. The bounding box can be used to select satellite images that cover that area."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
+   "id": "43b3508e-021e-46ac-89cc-c8c5905efa0b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "milan_gdf = countries = gpd.read_file('data/vector/italy/osm/milan_20240310.geojson')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "a0dc239b-e4fc-4a06-92b2-164bfdc823f0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8ce5ff31a5a741aaa7db274eb6506d9b",
+       "model_id": "6059844f1a85478f993afcfce3f7cd88",
        "version_major": 2,
        "version_minor": 0
       },
@@ -189,14 +215,13 @@
        "Map(center=[45.465, 9.188], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title', 'zoom_…"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from ipyleaflet import Map, GeoData, basemaps, LayersControl\n",
-    "import geopandas\n",
     "import json\n",
     "\n",
     "m = Map(center=(45.465, 9.188), zoom = 11, basemap= basemaps.OpenStreetMap.Mapnik)\n",
@@ -229,13 +254,12 @@
     "\n",
     "m.add(draw_control)\n",
     "m.add(LayersControl())\n",
-    "\n",
-    "m\n"
+    "m"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "id": "60662999-8596-4c72-b5f5-7e14b057b210",
    "metadata": {},
    "outputs": [
@@ -245,7 +269,7 @@
        "1"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "id": "da0b1cc9-3948-46cc-acc3-2d8f722e98fc",
    "metadata": {},
    "outputs": [
@@ -265,7 +289,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[9.174884, 45.497883], [9.174884, 45.523025], [9.223654, 45.523025], [9.223654, 45.497883], [9.174884, 45.497883]]]\n"
+      "[[[9.163687, 45.493954], [9.163687, 45.523788], [9.218639, 45.523788], [9.218639, 45.493954], [9.163687, 45.493954]]]\n"
      ]
     }
    ],
