ipyleaflet package examples

--- a/web_mapping.ipynb
+++ b/web_mapping.ipynb
@@ -19,14 +19,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "eeca9589-7179-41c7-a5b4-eaf910e33b16",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c7163c5e62ec41c78a1c00b4baa190f8",
+       "model_id": "2c587c09b3564c339d56de1bb8604a59",
        "version_major": 2,
        "version_minor": 0
       },
@@ -34,7 +34,7 @@
        "Map(center=[41.89, 12.492], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title', 'zoom_…"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +45,7 @@
     "from ipywidgets import Layout\n",
     "\n",
     "m = Map(\n",
-    "    basemap=basemap_to_tiles(basemaps.NASAGIBS.ModisTerraTrueColorCR, \"2017-04-08\"),\n",
+    "    basemap=basemap_to_tiles(basemaps.NASAGIBS.ModisTerraTrueColorCR, '2024-04-11'),\n",
     "    center=(41.890, 12.492),\n",
     "    zoom=9\n",
     ")\n",
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "60662999-8596-4c72-b5f5-7e14b057b210",
    "metadata": {},
    "outputs": [
@@ -269,7 +269,7 @@
        "1"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "da0b1cc9-3948-46cc-acc3-2d8f722e98fc",
    "metadata": {},
    "outputs": [
@@ -289,7 +289,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[9.163687, 45.493954], [9.163687, 45.523788], [9.218639, 45.523788], [9.218639, 45.493954], [9.163687, 45.493954]]]\n"
+      "[[[9.178112, 45.492029], [9.178112, 45.526675], [9.21177, 45.526675], [9.21177, 45.492029], [9.178112, 45.492029]]]\n"
      ]
     }
    ],
@@ -297,6 +297,14 @@
     "if (num_features > 0): \n",
     "    print(feature_collection['features'][num_features - 1]['geometry']['coordinates'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bfe0f04f-ce5b-4a98-a3d6-bbf39718f74e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
