--- a/marche_flood_event_2022.ipynb
+++ b/marche_flood_event_2022.ipynb
@@ -3300,7 +3300,7 @@
    "metadata": {},
    "source": [
     "## Conclusion\n",
-    "We have seen how to integrate different datasets to extract some statistical information about natural hazards, floods and landslides. We have mapped these events into the administrative divisions of the Marche region using the topological relation for vector data. The territory of a municipality might be a too large area to locate hazards precisely but it is still useful to guide our attention or that of decision makers.  "
+    "We have seen how to integrate different datasets to extract some statistical information about natural hazards, floods and landslides. We have mapped these events into the administrative divisions of the Marche region using the topological relation for vector data. From the data aggragated by administrative units we have been able to make a rough estimation of the risks for floods and landslides for each of them. The territory of a municipality might be a too large area to locate hazards precisely but it is still useful to guide our attention or that of decision makers.  "
    ]
   },
   {
