--- a/ordinary_kriging.ipynb
+++ b/ordinary_kriging.ipynb
@@ -83,7 +83,7 @@
    "id": "cda4e1bd-1f6c-45e4-b76f-ef18cf6c8a93",
    "metadata": {},
    "source": [
-    "## Computing the variogram and the kriged data\n",
+    "## Computing the variogram and the kridged data\n",
     "We use the OrdinaryKriging module to compute the variogram according to a model among linear, exponential or gaussian. The linear, exponential and gaussian models show similar results."
    ]
   },
@@ -119,7 +119,7 @@
    "id": "ab9b4ec7-96d0-4989-a107-44dac9faa12e",
    "metadata": {},
    "source": [
-    "## Kriging visualization"
+    "## Kridging visualization"
    ]
   },
   {
@@ -140,7 +140,7 @@
     }
    ],
    "source": [
-    "kt.write_asc_grid(gridx, gridy, z, filename=\"kriging_output.asc\")\n",
+    "kt.write_asc_grid(gridx, gridy, z, filename=\"kridging_output.asc\")\n",
     "plt.imshow(z)\n",
     "plt.show()"
    ]
