--- a/ordinary_kriging.ipynb
+++ b/ordinary_kriging.ipynb
@@ -5,17 +5,17 @@
    "id": "bc02e799-ee3f-4d0f-964c-da8c5cc38772",
    "metadata": {},
    "source": [
-    "# Ordinary kridging\n",
+    "# Ordinary kriging\n",
     "[Kridging](https://en.wikipedia.org/wiki/Kriging) is a spatial interpolation algorithm. This example is taken from the [PyKrige](https://geostat-framework.readthedocs.io/projects/pykrige/en/stable/examples/00_ordinary.html) documentation. In this example a 2D array is used to represent the x and y coordinates of 4 data points with the corresponding z value.\n",
     "The dataset is passed to the OrdinaryKriging that computes the variogram according to a model, e.g. linear, and the kriged data for all the 11x11 points in the grid. The variogram $\\gamma(h)$ is a function, computed using a data sample, that represents the variation of a variable of interest within a region\n",
     "\n",
     "$$\\gamma(h) = \\frac{1}{2m(h)} \\sum_{i=1}^{m(h)} [z(x_i) - z(x_i + h)]^2 $$\n",
     "\n",
-    "Here h is the lag, that is the distance between two data points, and m(h) is the number of paired comparisons at lag h. The variogram is used to compute the weights of the kridging.\n",
+    "Here h is the lag, that is the distance between two data points, and m(h) is the number of paired comparisons at lag h. The variogram is used to compute the weights of the kriging.\n",
     "\n",
     "$$\\hat Z(x_0) = \\sum_{i=1}^N \\lambda_i z(x_i)$$\n",
     "\n",
-    "$Z(x_0)$ is the kridged value of the z variable computed at a point $x_0$ based on the values at the sample data points. The formula is used to compute the Z values at the grid points."
+    "$Z(x_0)$ is the kriged value of the z variable computed at a point $x_0$ based on the values at the sample data points. The formula is used to compute the Z values at the grid points."
    ]
   },
   {
@@ -119,7 +119,7 @@
    "id": "ab9b4ec7-96d0-4989-a107-44dac9faa12e",
    "metadata": {},
    "source": [
-    "## Kridging visualization"
+    "## Kriging visualization"
    ]
   },
   {
