--- a/ordinary_kriging.ipynb
+++ b/ordinary_kriging.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Ordinary kriging\n",
     "[Kriging](https://en.wikipedia.org/wiki/Kriging) is a spatial interpolation algorithm. This example is taken from the [PyKrige](https://geostat-framework.readthedocs.io/projects/pykrige/en/stable/examples/00_ordinary.html) documentation. In this example a 2D array is used to represent the x and y coordinates of 4 data points with the corresponding z value.\n",
-    "The dataset is passed to the OrdinaryKriging that computes the variogram according to a model, e.g. linear, and the kriged data for all the 11x11 points in the grid. The variogram $\\gamma(h)$ is a function, computed using a data sample, that represents the variation of a variable of interest within a region\n",
+    "The dataset is passed to the OrdinaryKriging that computes the variogram according to a model, e.g. linear, and the kriged data for all the 11x11 points in the grid. The variogram $\\gamma(h)$ is a function, computed using a data sample, that represents the variation of a variable z(x) of interest within a region\n",
     "\n",
     "$$\\gamma(h) = \\frac{1}{2m(h)} \\sum_{i=1}^{m(h)} [z(x_i) - z(x_i + h)]^2 $$\n",
     "\n",
