--- a/ordinary_kriging.ipynb
+++ b/ordinary_kriging.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "$$\\hat Z(x_0) = \\sum_{i=1}^N \\lambda_i z(x_i)$$\n",
     "\n",
-    "$Z(x_0)$ is the kriged value of the z variable computed at a point $x_0$ based on the values at the sample data points. The formula is used to compute the Z values at the grid points."
+    "$\\hat Z(x_0)$ is the kriged value of the z variable computed at a point $x_0$ based on the values at the sample data points. The formula is used to compute the Z values at the grid points."
    ]
   },
   {
